--- a/coffee-house/sass/layouts/_header.scss
+++ b/coffee-house/sass/layouts/_header.scss
@@ -7,21 +7,25 @@ header {
   margin-bottom: 20px;
   padding: 0 40px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   height: 60px;
 }
 
 // header logo
-.logo-object {
-  height: 60px;
-  width: 100px;
-}
+//.logo-object {
+//  height: 60px;
+//  width: 100px;
+//}
+
 .header__logo {
+  height: 60px;
+
   img {
-    height: 60px;
     width: 100px;
   }
 }
+
 // header navigation
 .main-navigation {
   display: flex;
@@ -35,27 +39,78 @@ header {
 
 // header menu link button
 .header-menu-button {
-  margin-left: 1px;
+  &__link {
+    display: flex;
+    gap: 8px;
+    text-decoration: none;
+    color: $text-dark;
+
+    & span:last-child {
+      height: 24px;
+    }
+  }
 }
 
 .cup-icon {
   height: 20px;
   width: 20px;
-  margin-top: 1px;
+  margin-top: -2px;
 }
 
-.header-menu-button__link {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  text-decoration: none;
-  color: $text-dark;
-  padding-top: 15px;
+
+// header burger button
+.burger-button {
+  display: none;
 }
 
+// media rules
 @media (max-width: 1439px) {
   .wrapper {
     width: auto;
   }
 }
-@media (max-width: 768px) {}
+
+@media (max-width: 768px) {
+  .header__navigation {
+    display: none;
+  }
+  .burger-button {
+    display: flex;
+    width: 44px;
+    height: 44px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100px;
+    border: 1px solid $border-dark;
+
+    span {
+      position: relative;
+
+      &:before {
+        content: "";
+        position: absolute;
+        width: 18px;
+        height: 2px;
+        top: -5px;
+        left: -9px;
+        background-color: $text-dark;
+        border-radius: 2px;
+      }
+
+      &:after {
+        content: "";
+        position: absolute;
+        width: 18px;
+        height: 2px;
+        bottom: -5px;
+        left: -9px;
+        background-color: $text-dark;
+        border-radius: 2px;
+      }
+    }
+  }
+
+  .header-menu-button {
+    display: none;
+  }
+}
