--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -419,17 +419,15 @@ header {
   margin-bottom: 20px;
   padding: 0 40px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   height: 60px;
 }
 
-.logo-object {
+.header__logo {
   height: 60px;
-  width: 100px;
 }
-
 .header__logo img {
-  height: 60px;
   width: 100px;
 }
 
@@ -443,28 +441,69 @@ header {
   color: #403F3D;
 }
 
-.header-menu-button {
-  margin-left: 1px;
+.header-menu-button__link {
+  display: flex;
+  gap: 8px;
+  text-decoration: none;
+  color: #403F3D;
+}
+.header-menu-button__link span:last-child {
+  height: 24px;
 }
 
 .cup-icon {
   height: 20px;
   width: 20px;
-  margin-top: 1px;
+  margin-top: -2px;
 }
 
-.header-menu-button__link {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  text-decoration: none;
-  color: #403F3D;
-  padding-top: 15px;
+.burger-button {
+  display: none;
 }
 
 @media (max-width: 1439px) {
   .wrapper {
     width: auto;
+  }
+}
+@media (max-width: 768px) {
+  .header__navigation {
+    display: none;
+  }
+  .burger-button {
+    display: flex;
+    width: 44px;
+    height: 44px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100px;
+    border: 1px solid #665F55;
+  }
+  .burger-button span {
+    position: relative;
+  }
+  .burger-button span:before {
+    content: "";
+    position: absolute;
+    width: 18px;
+    height: 2px;
+    top: -5px;
+    left: -9px;
+    background-color: #403F3D;
+    border-radius: 2px;
+  }
+  .burger-button span:after {
+    content: "";
+    position: absolute;
+    width: 18px;
+    height: 2px;
+    bottom: -5px;
+    left: -9px;
+    background-color: #403F3D;
+    border-radius: 2px;
+  }
+  .header-menu-button {
+    display: none;
   }
 }
 footer {
@@ -692,6 +731,7 @@ h3 {
 }
 .button-icon-cup .cup-icon {
   margin-left: 8px;
+  margin-top: 1px;
   opacity: 0;
   transition: opacity 1s ease;
 }
