--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -506,6 +506,11 @@ header {
     display: none;
   }
 }
+@media (max-width: 400px) {
+  .header__wrapper {
+    padding: 0 16px;
+  }
+}
 footer {
   width: 1440px;
   padding: 0 40px 40px 40px;
