--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -917,6 +917,35 @@ h3 {
     padding: 100px 60px;
   }
 }
+@media (max-width: 700px) {
+  .enjoy {
+    padding: 0 16px;
+  }
+  .brand {
+    padding: 60px 16px;
+  }
+  .brand__text-box {
+    width: auto;
+    container-type: inline-size;
+  }
+  .brand__text-box h1 {
+    height: auto;
+    font-size: 4.2rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 115%;
+    font-size: clamp(42px, 9cqi, 60px);
+  }
+}
+@media (max-width: 400px) {
+  .brand__text-box h1 {
+    height: 144px;
+    font-size: 4.2rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 115%;
+  }
+}
 .slider {
   display: flex;
   flex-direction: column;
