--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -1190,6 +1190,19 @@ h3 {
     background-size: auto;
   }
 }
+@media (max-width: 760px) {
+  .gallery__title {
+    font-size: clamp(32px, 7cqi, 60px);
+  }
+}
+@media (max-width: 400px) {
+  .gallery {
+    padding: 0 16px;
+  }
+  .gallery__title {
+    font-size: 32px;
+  }
+}
 .app {
   display: flex;
   gap: 100px;
