fix: contact-us change width to max-width

--- a/coffee-house/sass/layouts/_footer.scss
+++ b/coffee-house/sass/layouts/_footer.scss
@@ -14,7 +14,7 @@ footer {
 
 //contact us block here
 .contact-us {
-  width: 530px;
+  max-width: 530px;
   display: flex;
   flex-direction: column;
   justify-content: center;
