--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -526,7 +526,7 @@ footer {
 }
 
 .contact-us {
-  width: 530px;
+  max-width: 530px;
   display: flex;
   flex-direction: column;
   justify-content: center;
