--- a/coffee-house/sass/components/_slider.scss
+++ b/coffee-house/sass/components/_slider.scss
@@ -20,11 +20,22 @@
   margin: 40px 0;
 }
 
-.slider__content {
+.slider-content {
   display: flex;
   justify-content: center;
   width: 1152px;
   margin: 0 40px;
+}
+
+.slide-container {
+  width: 480px;
+  overflow: hidden;
+}
+
+.slide-frame {
+  display: flex;
+  min-width: 1740px;
+  transition: translate .5s ease;
 }
 
 .slide {
@@ -32,13 +43,13 @@
   flex-direction: column;
   align-items: center;
   width: 480px;
+  min-width: 480px;
+  margin-right: 100px;
 
   &__image {
     height: 480px;
     width: 100%;
     margin-bottom: 20px;
-    background: url("../assets/slider/coffee-slider-1.png") no-repeat;
-    background-size: contain;
   }
 
   &__dish {
@@ -50,6 +61,24 @@
     p {
       text-align: center;
     }
+  }
+}
+
+.slide-frappuccino {
+  .slide__image {
+    background: url("../assets/slider/coffee-slider-1.png") center/contain no-repeat;
+  }
+}
+
+.slide-macchiato {
+  .slide__image {
+    background: url("../assets/slider/coffee-slider-2.png") center/contain no-repeat;
+  }
+}
+
+.slide-ice {
+  .slide__image {
+    background: url("../assets/slider/coffee-slider-3.png") center/contain no-repeat;
   }
 }
 
@@ -108,7 +137,13 @@
     background-color: $border-light;
   }
 
+  .control {
+    width: 0;
+    transition: width 5s linear;
+  }
+
   .active {
+    width: 100%;
     background-color: $border-dark;
   }
 }
@@ -127,12 +162,17 @@
   .slider {
     padding: 0 16px;
 
-    &__content {
+    .slider-content {
       margin: 0;
     }
   }
+  .slide-container {
+    width: 348px;
+  }
   .slide {
     width: 348px;
+    min-width: 348px;
+
     &__image {
       height: 348px;
     }
@@ -141,6 +181,7 @@
     display: none;
   }
 }
+
 @media (max-width: 400px) {
   .slider__header {
     font-size: 32px;
