feat: generate menu cards

--- a/coffee-house/sass/components/_offer.scss
+++ b/coffee-house/sass/components/_offer.scss
@@ -86,6 +86,10 @@ main {
     }
   }
 
+  .tab-no-clickable {
+    pointer-events: none;
+  }
+
   .active {
     cursor: auto;
     color: $text-light;
