--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -1636,5 +1636,164 @@ main .hidden-header {
     grid-template-columns: 310px;
   }
 }
+.overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  padding: 0 40px;
+  background-color: rgba(64, 63, 61, 0.8);
+  transition: opacity 0.3s ease-out;
+}
+
+.modal-card {
+  display: flex;
+  gap: 20px;
+  border-radius: 40px;
+  background-color: #E1D4C9;
+  padding: 16px;
+  max-width: 800px;
+}
+
+.modal-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -1px;
+  border-radius: 40px;
+  width: 310px;
+  height: 310px;
+  overflow: hidden;
+}
+.modal-img img {
+  transition: width 0.5s ease-out;
+  width: 340px;
+}
+.modal-img img:hover {
+  width: 310px;
+}
+
+.modal-description {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: calc(100% - 330px);
+  max-width: 438px;
+}
+.modal-description p {
+  margin: 0;
+}
+.modal-description .modal-title {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.modal-description .modal-size {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.modal-description .modal-additives {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.modal-description .modal-total {
+  display: flex;
+  justify-content: space-between;
+}
+.modal-description .modal-info {
+  display: flex;
+  gap: 8px;
+  border-top: 1px solid #C1B6AD;
+  padding-top: 11px;
+  padding-bottom: 12px;
+}
+.modal-description .modal-info p {
+  width: calc(100% - 24px);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%;
+}
+.modal-description .modal-close-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  height: 44px;
+  font-weight: 600;
+  border-radius: 100px;
+  border: 1px solid #665F55;
+  cursor: pointer;
+  transition: background-color 0.5s ease-out, border-color 0.5s ease-out, color 0.5s ease-out;
+}
+.modal-description .modal-close-button:hover {
+  border-color: #665F55;
+  background-color: #665F55;
+  color: #E1D4C9;
+}
+
+.modal-size-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+.modal-size-buttons .tab-no-clickable {
+  cursor: default;
+  pointer-events: none;
+}
+.modal-size-buttons .active {
+  border-color: #665F55;
+  background-color: #665F55;
+  color: #E1D4C9;
+}
+
+.modal-additives-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+.tab {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  height: 46px;
+  padding: 8px 16px 8px 8px;
+  color: #403F3D;
+  font-weight: 600;
+  border-radius: 100px;
+  border: 1px solid #C1B6AD;
+  cursor: pointer;
+  transition: background-color 0.5s ease-out, color 0.5s ease-out, border-color 0.5s ease-out;
+}
+.tab:hover {
+  border-color: #665F55;
+  background-color: #665F55;
+  color: #E1D4C9;
+}
+.tab:hover .tab-icon {
+  background-color: #E1D4C9;
+}
+.tab .tab-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  color: #403F3D;
+  background-color: #C1B6AD;
+  border-radius: 100px;
+  transition: background-color 0.5s ease-out;
+}
+
+.tab-icon {
+  margin-left: -1px;
+}
 
 /*# sourceMappingURL=style.css.map */
