--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -1741,6 +1741,7 @@ main .hidden-header {
   border-radius: 100px;
   border: 1px solid #665F55;
   cursor: pointer;
+  user-select: none;
   transition: background-color 0.5s ease-out, border-color 0.5s ease-out, color 0.5s ease-out;
 }
 @media (hover: hover) and (pointer: fine) {
@@ -1755,6 +1756,7 @@ main .hidden-header {
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
+  user-select: none;
 }
 
 .tab-no-clickable {
@@ -1772,6 +1774,7 @@ main .hidden-header {
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
+  user-select: none;
 }
 
 .tab {
