--- a/coffee-house/sass/components/_preview.scss
+++ b/coffee-house/sass/components/_preview.scss
@@ -98,6 +98,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 100px;
+    cursor: pointer;
     border: 1px solid $border-dark;
 
     svg {
