--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -1609,6 +1609,7 @@ main .hidden-header {
     align-items: center;
     justify-content: center;
     border-radius: 100px;
+    cursor: pointer;
     border: 1px solid #665F55;
   }
   .menu-circle-button svg {
