--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -458,6 +458,10 @@ header {
   margin-top: -2px;
 }
 
+.burger-wrapper {
+  display: none;
+}
+
 .burger-button {
   display: none;
 }
@@ -505,43 +509,51 @@ header {
     left: -9px;
     transition: transform 0.3s ease-in-out, bottom 0.3s ease-in-out;
   }
-  .burger-button.burger-checked {
+  .burger-button.collapsed {
     position: absolute;
     top: 8px;
     right: 0;
   }
-  .burger-button.burger-checked span:before {
+  .burger-button.collapsed span:before {
     top: -1px;
     transform: rotate(225deg);
   }
-  .burger-button.burger-checked span:after {
+  .burger-button.collapsed span:after {
     bottom: -1px;
     transform: rotate(-225deg);
   }
-  .header-menu-button.burger-checked {
-    display: block;
+  body.collapsed {
+    overflow: hidden;
   }
-  .header__logo.burger-checked {
-    position: absolute;
-    top: 0;
-    left: 0;
+  body.collapsed .header {
+    overflow: hidden;
   }
-  .header__navigation.burger-checked {
-    display: block;
-    width: 100%;
-  }
-  .header__wrapper.burger-checked {
+  .burger-wrapper {
+    display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    width: 100%;
     height: 100%;
-    padding-top: 140px;
+    padding: 60px 40px;
+    gap: 100px;
+    position: fixed;
+    left: 110vw;
+    z-index: 100;
+    background-color: #E1D4C9;
     font-size: 3.2rem;
     font-style: normal;
     font-weight: 600;
     line-height: 125%;
+    transition: left 0.8s ease, opacity 0.8s ease;
   }
-  .header__wrapper.burger-checked .main-navigation {
+  .burger-wrapper.collapsed {
+    transition: left 0.8s ease, opacity 0.8s ease;
+  }
+  .burger-wrapper .burger__navigation {
+    width: 100%;
+  }
+  .burger-wrapper .burger__navigation .main-navigation {
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -549,26 +561,16 @@ header {
     width: 100%;
     margin: 0;
   }
-  .header__wrapper.burger-checked .header-menu-button {
-    padding-top: 100px;
-  }
-  .header__wrapper.burger-checked .header-menu-button__link {
+  .burger-wrapper .burger-menu-button__link {
+    display: flex;
+    text-decoration: none;
+    color: #403F3D;
     gap: 16px;
   }
-  .header__wrapper.burger-checked .cup-icon {
+  .burger-wrapper .cup-icon {
     height: 40px;
     width: 40px;
     margin-top: 0;
-  }
-  body.burger-checked {
-    overflow: hidden;
-  }
-  body.burger-checked .header {
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    z-index: 1000;
-    background-color: #E1D4C9;
   }
 }
 @media (max-width: 400px) {
