--- a/coffee-house/sass/components/_modal.scss
+++ b/coffee-house/sass/components/_modal.scss
@@ -140,6 +140,9 @@
   border-color: $background-container;
   background-color: $background-container;
   color: $text-light;
+  p{
+    color: $text-light;
+  }
 }
 
 .modal-additives-buttons {
