--- a/coffee-house/sass/style.css
+++ b/coffee-house/sass/style.css
@@ -539,6 +539,7 @@ header {
     gap: 100px;
     position: fixed;
     left: 110vw;
+    top: 54px;
     z-index: 100;
     background-color: #E1D4C9;
     font-size: 3.2rem;
