fix: slider control width

--- a/coffee-house/sass/components/_slider.scss
+++ b/coffee-house/sass/components/_slider.scss
@@ -135,6 +135,8 @@
     height: 4px;
     border-radius: 100px;
     background-color: $border-light;
+    max-width: 40px;
+    overflow: hidden;
   }
 
   .control {
