--- a/hangman/sass/style.scss
+++ b/hangman/sass/style.scss
@@ -22,15 +22,15 @@ body {
   position: fixed;
   height: 100%;
   width: 100%;
-  padding: 0 10px;
+  padding: 0 1rem;
   margin: 0;
 }
 
 .wrapper {
   display: flex;
   justify-content: center;
-  gap: 60px;
-  max-width: 850px;
+  gap: 6rem;
+  max-width: 85rem;
   background-color: $background-game;
   border-radius: 1rem;
   padding: 6rem 4rem;
@@ -118,7 +118,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: .7rem;
-    width: calc(100% / 9 - 6px);
+    width: calc(100% / 9 - .6rem);
     font-weight: 600;
     color: $keyboard-text-color;
     border-radius: .4rem;
@@ -135,7 +135,7 @@ body {
     justify-content: center;
     gap: 0;
     padding: 3rem 2rem;
-    max-width: 470px;
+    max-width: 47rem;
   }
 
   .game-container {
