--- a/hangman/sass/style.css
+++ b/hangman/sass/style.css
@@ -78,11 +78,13 @@ body {
   font-size: 2rem;
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
 .letter {
   border-bottom: 3px solid black;
-  width: 2.5rem;
+  max-width: 2.5rem;
+  height: 2.7rem;
   font-weight: 900;
   text-align: center;
   text-transform: uppercase;
