--- a/hangman/sass/style.css
+++ b/hangman/sass/style.css
@@ -104,6 +104,7 @@ body {
   flex-wrap: wrap;
   gap: 0.6rem;
   max-width: 45rem;
+  user-select: none;
 }
 .keyboard div {
   display: flex;
@@ -117,6 +118,13 @@ body {
   cursor: pointer;
   text-transform: uppercase;
   background-color: #5A5FB2;
+}
+.keyboard div:hover {
+  opacity: 0.7;
+}
+.keyboard .disabled {
+  pointer-events: none;
+  opacity: 0.7;
 }
 
 @media (max-width: 768px) {
